# test-db-fast-api

./: .gitignore  README.md  factories.py  models.py  pyproject.toml  request_script.py  run  run_containers  run_script  servers_dbs.yml
.github/workflows/: ci.yml
main/: Dockerfile  Dockerfile.script  Dockerfile.server  servers_dbs.yml
main/app/: main.py  pyproject.toml  services.py
main/app/database/: __init__.py  actions.py  database.py  dependencies.py  models.py  repository.py  schemas.py
main/app/routers/: __init__.py  users.py
main/script/: main.py  pyproject.toml
server_mysql/: docker_server_mysql.yml  pyproject.toml
server_mysql/app/: main.py  services.py
server_mysql/app/database/: schemas.py
server_mysql/app/routers/: users.py
server_postgresql/: Dockerfile  docker_server_postgresql.yml  pyproject.toml
server_postgresql/app/: main.py
server_postgresql/app/database/: actions.py  database.py
server_postgress/: Dockerfile  docker-compose.yml
server_postgress/app/: main.py  services.py
server_postgress/app/database/: __init__.py  actions.py  database.py  models.py  schemas.py
server_postgress/app/routers/: users.py
