[tool.poetry]
name = "server_postgress"
version = "0.1.0"
description = ""
authors = ["Nazar <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.1"}
SQLAlchemy = "^1.4.39"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
