[tool.poetry]
name = "server_postgress"
version = "0.1.0"
description = ""
authors = ["Nazar <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pydantic = {extras = ["email"], version = "^1.9.1"}
SQLAlchemy = "^1.4.39"
asyncpg = { version = "^0.25.0", optional = true}
psycopg2-binary = { version = "^2.9.3", optional = true}
psycopg2 = { version = "^2.9.3", optional = true}
mysql-connector-python = { version = "^8.0.29", optional = true}

[tool.poetry.extras]
mysql = ["mysql-connector-python"]
postgresql = ["asyncpg", "psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
